@@ -478,6 +478,7 @@ Bugfixes (win32):
 
 Version 2.8      2014-xx-xx
 ---------------------------
+- [FTR pyserial:37] Support fileno() function in the socket protocol
 
 Bugfixes:
 
